加入健康检测路由
